deploy/kubernates/base/app-liquibase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-liquibase
    labels:
        tier: app-liquibase
    namespace: app
spec:
    replicas: 1
    selector:
        matchLabels:
            tier: app-liquibase
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app_net: "true"
                tier: app-liquibase
        spec:
            containers:
                - name: app-liquibase
                  image: app-liquibase # image: romapres2010/app-liquibase:2.1.8
                  command: ['sh', '-c', "docker-entrypoint.sh --changelog-file=./changelog/$(APP_PG_CHANGELOG) --url=jdbc:postgresql://$(APP_PG_HOST):$(APP_PG_PORT)/$(APP_PG_DBNAME) --username=$(APP_PG_USER) --password=$(APP_PG_PASS) --logLevel=info update"]
                  imagePullPolicy: IfNotPresent
            restartPolicy: Never
