deploy/kubernates/base/app-db-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-db
    labels:
        tier: app-db
    namespace: go-app
spec:
    type: NodePort
    ports:
        - port: 5432
          targetPort: 5432
    selector:
        tier: app-db
